implemented simple mapping
