# mr/controllers/default_controller.py
@@ -4,11 +4,12 @@ from typing import Tuple
 from typing import Union
 
 from mr.models.registered_model import RegisteredModel  # noqa: E501
-from mr.models.versioned_model import VersionedModel  # noqa: E501
 from mr import util
+from mr.service.model_service import ModelService
 
+model_service = ModelService()
 
-def create_registered_model(registered_model):  # noqa: E501
+def create_registered_model():  # noqa: E501
     """Create a RegisteredModel
 
     Creates a new instance of a &#x60;RegisteredModel&#x60;. # noqa: E501
@@ -20,25 +21,12 @@ def create_registered_model(registered_model):  # noqa: E501
     """
     if connexion.request.is_json:
         registered_model = RegisteredModel.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+        model_service.create_registered_model(registered_model)
+        return None, 200
+    return 'Invalid request body', 400
 
 
-def create_versioned_model(versioned_model):  # noqa: E501
-    """Create a VersionedModel
-
-    Creates a new instance of a &#x60;VersionedModel&#x60;. # noqa: E501
-
-    :param versioned_model: A new &#x60;VersionedModel&#x60; to be created.
-    :type versioned_model: dict | bytes
-
-    :rtype: Union[None, Tuple[None, int], Tuple[None, int, Dict[str, str]]
-    """
-    if connexion.request.is_json:
-        versioned_model = VersionedModel.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
-
-
-def delete_registered_model(registeredmodel_id):  # noqa: E501
+def delete_registered_model():  # noqa: E501
     """Delete a RegisteredModel
 
     Deletes an existing &#x60;RegisteredModel&#x60;. # noqa: E501
@@ -51,20 +39,7 @@ def delete_registered_model(registeredmodel_id):  # noqa: E501
     return 'do some magic!'
 
 
-def delete_versioned_model(versionedmodel_id):  # noqa: E501
-    """Delete a VersionedModel
-
-    Deletes an existing &#x60;VersionedModel&#x60;. # noqa: E501
-
-    :param versionedmodel_id: A unique identifier for a &#x60;VersionedModel&#x60;.
-    :type versionedmodel_id: str
-
-    :rtype: Union[None, Tuple[None, int], Tuple[None, int, Dict[str, str]]
-    """
-    return 'do some magic!'
-
-
-def get_registered_model(registeredmodel_id):  # noqa: E501
+def get_registered_model():  # noqa: E501
     """Get a RegisteredModel
 
     Gets the details of a single instance of a &#x60;RegisteredModel&#x60;. # noqa: E501
@@ -74,7 +49,7 @@ def get_registered_model(registeredmodel_id):  # noqa: E501
 
     :rtype: Union[RegisteredModel, Tuple[RegisteredModel, int], Tuple[RegisteredModel, int, Dict[str, str]]
     """
-    return 'do some magic!'
+    return 'Not yet implemented', 500
 
 
 def get_registered_models():  # noqa: E501
@@ -85,34 +60,10 @@ def get_registered_models():  # noqa: E501
 
     :rtype: Union[List[RegisteredModel], Tuple[List[RegisteredModel], int], Tuple[List[RegisteredModel], int, Dict[str, str]]
     """
-    return 'do some magic!'
+    return model_service.get_registered_models()
 
 
-def get_versioned_model(versionedmodel_id):  # noqa: E501
-    """Get a VersionedModel
-
-    Gets the details of a single instance of a &#x60;VersionedModel&#x60;. # noqa: E501
-
-    :param versionedmodel_id: A unique identifier for a &#x60;VersionedModel&#x60;.
-    :type versionedmodel_id: str
-
-    :rtype: Union[VersionedModel, Tuple[VersionedModel, int], Tuple[VersionedModel, int, Dict[str, str]]
-    """
-    return 'do some magic!'
-
-
-def get_versioned_models():  # noqa: E501
-    """List All VersionedModels
-
-    Gets a list of all &#x60;VersionedModel&#x60; entities. # noqa: E501
-
-
-    :rtype: Union[List[VersionedModel], Tuple[List[VersionedModel], int], Tuple[List[VersionedModel], int, Dict[str, str]]
-    """
-    return 'do some magic!'
-
-
-def update_registered_model(registeredmodel_id, registered_model):  # noqa: E501
+def update_registered_model():  # noqa: E501
     """Update a RegisteredModel
 
     Updates an existing &#x60;RegisteredModel&#x60;. # noqa: E501
@@ -126,21 +77,4 @@ def update_registered_model(registeredmodel_id, registered_model):  # noqa: E501
     """
     if connexion.request.is_json:
         registered_model = RegisteredModel.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
-
-
-def update_versioned_model(versionedmodel_id, versioned_model):  # noqa: E501
-    """Update a VersionedModel only on updatable fields
-
-    Updates an existing &#x60;VersionedModel&#x60; only on updatable fields. # noqa: E501
-
-    :param versionedmodel_id: A unique identifier for a &#x60;VersionedModel&#x60;.
-    :type versionedmodel_id: str
-    :param versioned_model: Updated &#x60;VersionedModel&#x60; information.
-    :type versioned_model: dict | bytes
-
-    :rtype: Union[None, Tuple[None, int], Tuple[None, int, Dict[str, str]]
-    """
-    if connexion.request.is_json:
-        versioned_model = VersionedModel.from_dict(connexion.request.get_json())  # noqa: E501
-    return 'do some magic!'
+    return 'Not yet implemented', 500
