# mr/openapi/openapi.yaml
@@ -108,108 +108,6 @@ paths:
       summary: Update a RegisteredModel
       x-openapi-router-controller: mr.controllers.default_controller
     summary: Path used to manage a single RegisteredModel.
-  /versionedmodels:
-    description: "The REST endpoint/path used to list and create zero or more `VersionedModel`\
-      \ entities.  This path contains a `GET` and `POST` operation to perform the\
-      \ list and create tasks, respectively."
-    get:
-      description: Gets a list of all `VersionedModel` entities.
-      operationId: get_versioned_models
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                items:
-                  $ref: '#/components/schemas/VersionedModel'
-                type: array
-          description: Successful response - returns an array of `VersionedModel`
-            entities.
-      summary: List All VersionedModels
-      x-openapi-router-controller: mr.controllers.default_controller
-    post:
-      description: Creates a new instance of a `VersionedModel`.
-      operationId: create_versioned_model
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/VersionedModel'
-        description: A new `VersionedModel` to be created.
-        required: true
-      responses:
-        "201":
-          description: Successful response.
-      summary: Create a VersionedModel
-      x-openapi-router-controller: mr.controllers.default_controller
-    summary: Path used to manage the list of versionedmodels.
-  /versionedmodels/{versionedmodelId}:
-    delete:
-      description: Deletes an existing `VersionedModel`.
-      operationId: delete_versioned_model
-      parameters:
-      - description: A unique identifier for a `VersionedModel`.
-        explode: false
-        in: path
-        name: versionedmodelId
-        required: true
-        schema:
-          type: string
-        style: simple
-      responses:
-        "204":
-          description: Successful response.
-      summary: Delete a VersionedModel
-      x-openapi-router-controller: mr.controllers.default_controller
-    description: "The REST endpoint/path used to get, update, and delete single instances\
-      \ of an `VersionedModel`.  This path contains `GET`, `PUT`, and `DELETE` operations\
-      \ used to perform the get, update, and delete tasks, respectively."
-    get:
-      description: Gets the details of a single instance of a `VersionedModel`.
-      operationId: get_versioned_model
-      parameters:
-      - description: A unique identifier for a `VersionedModel`.
-        explode: false
-        in: path
-        name: versionedmodelId
-        required: true
-        schema:
-          type: string
-        style: simple
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/VersionedModel'
-          description: Successful response - returns a single `VersionedModel`.
-      summary: Get a VersionedModel
-      x-openapi-router-controller: mr.controllers.default_controller
-    put:
-      description: Updates an existing `VersionedModel` only on updatable fields.
-      operationId: update_versioned_model
-      parameters:
-      - description: A unique identifier for a `VersionedModel`.
-        explode: false
-        in: path
-        name: versionedmodelId
-        required: true
-        schema:
-          type: string
-        style: simple
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/VersionedModel'
-        description: Updated `VersionedModel` information.
-        required: true
-      responses:
-        "202":
-          description: Successful response.
-      summary: Update a VersionedModel only on updatable fields
-      x-openapi-router-controller: mr.controllers.default_controller
-    summary: Path used to manage a single VersionedModel.
 components:
   schemas:
     Environment:
